Fix avatar placeholder border gap while loading state

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,8 @@ a {
 
 * {
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: dark) {
